--- a/404.md
+++ b/404.md
@@ -1,10 +1,7 @@
 ---
-permalink: /404
-layout: page
+   title: 404
+   permalink: /404
+   layout: page
 ---
-
-# 404
-
-**Page not found :(**
 
 The requested page could not be found.
